<resources>
    <string name="app_name">Project02</string>
    <string name="mainMenuTravelButtonText">My Travel</string>
    <string name="mainMenuWellnessButtonText">My Wellness</string>
    <string name="mainMenuExerciseButtonText">My Exercise</string>
    <string name="mainMenuEventButtonText">My Events</string>
    <string name="eventCreateEventButtonText">CREATE EVENT</string>
    <string name="eventGreetingTextViewText">My Events</string>
    <string name="eventCreateNameHint">Enter Event Name</string>
    <string name="eventCreateDescHint">Enter Event Description</string>
    <string name="eventCreateDateHint">Enter Event Date</string>
    <string name="eventCreateTimeHint">Enter Event Time</string>
    <string name="eventCreateSaveButton">SAVE EVENT</string>
    <string name="eventCreateNameTextViewText">Name</string>
    <string name="eventCreateDescTextViewText">Desc</string>
    <string name="eventCreateDateTextViewText">Date</string>
    <string name="eventCreateTimeTextViewText">Time</string>
    <string name="hiking_route">Hiking Route</string>
    <string name="outdoor_activity">Outdoor Activity</string>
    <string name="visited_place">Visited Place</string>
    <string name="save_exploration">Save Exploration</string>

    <!-- ================= -->
    <!-- Wellness Activity -->
    <!-- ================= -->

    <string name="wellnessActivityHeader">WELLNESS</string>

    <string name="wellnessActivitySave">Save!</string>
    <string name="wellnessActivitySaveSuccess">Entry recorded, view it in the summary page.</string>
    <string name="wellnessActivitySaveFail">Failed to record entry, please report this issue.</string>

    <!-- Sleep -->
    <string name="wellnessActivitySleepCardHeader">Sleep</string>
    <string name="wellnessActivitySleepCardSubtitle">How well did you sleep last night?</string>

    <string name="wellnessActivitySleepHeader">How\'s your sleep for today?</string>

    <string name="wellnessActivitySleepHoursLabel">How many hours did you sleep?</string>
    <string name="wellnessActivitySleepHoursMinLabel">0 hours</string>
    <string name="wellnessActivitySleepHoursMaxLabel">12+ hours</string>
    <string name="wellnessActivitySleepHoursValue">%1$d hours</string>

    <string name="wellnessActivitySleepRefreshedLabel">Are you feeling refreshed?</string>
    <string name="wellnessActivitySleepRestlessLabel">Are you feeling restless?</string>

    <!-- Mood -->
    <string name="wellnessActivityMoodCardHeader">Mood</string>
    <string name="wellnessActivityMoodCardSubtitle">How have you been feeling today?</string>

    <!-- Journal -->
    <string name="wellnessActivityJournalCardHeader">Journal</string>
    <string name="wellnessActivityJournalCardSubtitle">Lets write down whats on your mind</string>

    <!-- Summary -->
    <string name="wellnessActivitySummaryCardHeader">Summary</string>
    <string name="wellnessActivitySummaryCardSubtitle">Click here to see a summary</string>
    <string name="loginTitleTextViewText">Welcome to Activiti!</string>
    <string name="loginUsernameEditTextHint">Username</string>
    <string name="loginPasswordEditTextHint">Password</string>
    <string name="loginLoginButtonText">LOGIN!</string>
    <string name="loginSignUpButtonText">SIGN UP!</string>
    <string name="topMenuBackTextViewText">Back</string>
    <string name="topMenuUserTextViewText">USER</string>
    <string name="signupTitleTextViewText">Please Sign Up!</string>
    <string name="signupSignupButtonText">SIGN UP!</string>
    <string name="adminUsernameEditTextHint">Enter Username</string>
    <string name="adminToggleAdminButtonText">TOGGLE ADMIN</string>
    <string name="adminDeleteUserButtonText">DELETE USER</string>
    <string name="mainMenuGreetingTextViewText">Hello User!</string>
    <string name="hiking_routes">Hiking Routes</string>
    <string name="travel_amp_exploration"><![CDATA[Travel & Exploration]]></string>
    <string name="visited_places">Visited Places</string>
    <string name="view_hiking_routes">View Hiking Routes</string>
    <string name="view_visited_places">View Visited Places</string>
    <string name="search_visited_place_by_name">Search Visited Place by name</string>
    <string name="search_hiking_route_by_name">Search Hiking Route by name</string>
    <string name="eventCreateLocationEditTextHint">Enter Event Location</string>
    <string name="eventCreateLocationTextViewText">Loc.</string>
    <string name="eventItemEditTextViewText">Edit Event</string>
    <string name="eventItemDeleteTextViewText">Delete Event</string>
    <string name="eventCreateGreetingTextViewText">Create Event</string>
    <string name="search_outdoor_activity_by_name">Search Outdoor Activity by name</string>
</resources>