<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainMenuGreetingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Hello User!"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/mainMenuGreetingTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:id="@+id/mainMenuEventButton"
        android:text="@string/mainMenuEventButtonText"
        android:textSize="32sp" />
    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/mainMenuEventButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:id="@+id/mainMenuExerciseButton"
        android:text="@string/mainMenuExerciseButtonText"
        android:textSize="32sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/mainMenuExerciseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:id="@+id/mainMenuWellnessButton"
        android:text="@string/mainMenuWellnessButtonText"
        android:textSize="32sp" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/mainMenuWellnessButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:id="@+id/mainMenuTravelButton"
        android:text="@string/mainMenuTravelButtonText"
        android:textSize="32sp" />

</androidx.constraintlayout.widget.ConstraintLayout>